--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<div class="car_title">
 								<span>Nissan TERRANO</span>
 								<b><font>Спеццена до 27 октября</font></b><br>
-								от 1&nbsp;031&nbsp;000&nbsp;руб.<br>
+								от 1&nbsp;031&nbsp;000&nbsp;₽<br>
 														<!-- подарок 80 000 руб.<br>
 														от АВТОМИРА</b>-->
 													</div>
@@ -150,41 +150,14 @@
 												</a>
 
 												<a class="popup btn rassrochka" href="#form_popup"
-												data-title="Получить рассрочку"
+												data-title="Получить сниженную <br>% ставку по кредиту"
 												data-comment=""
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												<i></i><span>Получить рассрочку</span>
-											</a>
+												<i></i><span>Получить сниженную <br>% ставку по кредиту</span>
+												</a>
 
-												<!-- <div class="colors_title">Доступные цвета</div>
-
-												<ul class="colors_items">
-														<li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#d1d1d1"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#898989"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#898989"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#cdc6ba"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#be0d1b"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#d0e2e5"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-													</ul> -->
 												</div>
 
 
@@ -196,7 +169,7 @@
 														data-form_name="callback"
 														data-form_type_model_name=""
 														data-form_diler="">
-														Выгода до <span>80&nbsp;000 руб.</span>
+														Выгода до <span>80&nbsp;000&nbsp;₽</span>
 													</a>
 													<a class="popup cred" href="#form_popup"
 													data-title="0 руб. Первый взнос"
@@ -204,7 +177,7 @@
 													data-form_name="callback"
 													data-form_type_model_name=""
 													data-form_diler="">
-													Выгода по Трейд Ин <span>60&nbsp;000 руб.</span>
+													Выгода по Трейд Ин <span>60&nbsp;000&nbsp;₽</span>
 												</a>
 												<a class="popup cred" href="#form_popup"
 												data-title="0 руб. Первый взнос"
@@ -212,7 +185,7 @@
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												Выгода по программе «В кругу&nbsp;Nissan» <span>20&nbsp;000 руб.</span>
+												Выгода по программе «В&nbsp;кругу&nbsp;Nissan» <span>20&nbsp;000&nbsp;₽</span>
 											</a>
 										</div>
 										<div class="btns">
@@ -242,7 +215,7 @@
 								<div class="car_title">
 									<span>Nissan QASHQAI</span>
 									<b><font>Спеццена до 27 октября</font></b><br>
-									от 1&nbsp;303&nbsp;000&nbsp;руб.<br>
+									от 1&nbsp;303&nbsp;000&nbsp;₽<br>
 														<!-- подарок 80 000 руб.<br>
 														от АВТОМИРА</b>-->
 													</div>
@@ -257,41 +230,14 @@
 												</a>
 
 												<a class="popup btn rassrochka" href="#form_popup"
-												data-title="Получить рассрочку"
+												data-title="Получить сниженную <br>% ставку по кредиту"
 												data-comment=""
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												<i></i><span>Получить рассрочку</span>
-											</a>
+												<i></i><span>Получить сниженную <br>% ставку по кредиту</span>
+												</a>
 
-												<!-- <div class="colors_title">Доступные цвета</div>
-
-												<ul class="colors_items">
-														<li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#d1d1d1"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#898989"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#898989"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#cdc6ba"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#be0d1b"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#d0e2e5"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-													</ul> -->
 												</div>
 
 
@@ -303,7 +249,7 @@
 														data-form_name="callback"
 														data-form_type_model_name=""
 														data-form_diler="">
-														Выгода до <span>130&nbsp;000 руб.</span>
+														Выгода до <span>130&nbsp;000&nbsp;₽</span>
 													</a>
 													<a class="popup cred" href="#form_popup"
 													data-title="0 руб. Первый взнос"
@@ -311,7 +257,7 @@
 													data-form_name="callback"
 													data-form_type_model_name=""
 													data-form_diler="">
-													Выгода по Трейд Ин <span>100&nbsp;000 руб.</span>
+													Выгода по Трейд Ин <span>100&nbsp;000&nbsp;₽</span>
 												</a>
 												<a class="popup cred" href="#form_popup"
 												data-title="0 руб. Первый взнос"
@@ -319,7 +265,7 @@
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												Выгода по программе «В кругу&nbsp;Nissan» <span>30&nbsp;000 руб.</span>
+												Выгода по программе «В&nbsp;кругу&nbsp;Nissan» <span>30&nbsp;000&nbsp;₽</span>
 											</a>
 										</div>
 										<div class="btns">
@@ -349,7 +295,7 @@
 								<div class="car_title">
 									<span>Nissan XTRAIL</span>
 									<b><font>Спеццена до 27 октября</font></b><br>
-									от 1&nbsp;549&nbsp;000&nbsp;руб.<br>
+									от 1&nbsp;549&nbsp;000&nbsp;₽<br>
 														 <!-- подарок 30 000 руб.<br>
 														 от ЭКСПЕРТ САМАРА</b> -->
 													 </div>
@@ -364,41 +310,14 @@
 												 </a>
 
 												 <a class="popup btn rassrochka" href="#form_popup"
-												 data-title="Получить рассрочку"
-												 data-comment=""
-												 data-form_name="callback"
-												 data-form_type_model_name=""
-												 data-form_diler="">
-												 <i></i><span>Получить рассрочку</span>
-											 </a>
+												data-title="Получить сниженную <br>% ставку по кредиту"
+												data-comment=""
+												data-form_name="callback"
+												data-form_type_model_name=""
+												data-form_diler="">
+												<i></i><span>Получить сниженную <br>% ставку по кредиту</span>
+												</a>
 
-												<!-- <div class="colors_title">Доступные цвета</div>
-
-												<ul class="colors_items">
-														<li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#d1d1d1"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#898989"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#898989"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#cdc6ba"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#be0d1b"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#d0e2e5"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-													</ul> -->
 												</div>
 
 
@@ -410,7 +329,7 @@
 														data-form_name="callback"
 														data-form_type_model_name=""
 														data-form_diler="">
-														Выгода до <span>200&nbsp;000 руб.</span>
+														Выгода до <span>200&nbsp;000&nbsp;₽</span>
 													</a>
 													<a class="popup cred" href="#form_popup"
 													data-title="0 руб. Первый взнос"
@@ -426,7 +345,7 @@
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												Выгода по программе «В кругу&nbsp;Nissan» <span>30&nbsp;000 руб.</span>
+												Выгода по программе «В&nbsp;кругу&nbsp;Nissan» <span>30&nbsp;000&nbsp;₽</span>
 											</a>
 										</div>
 										<div class="btns">
@@ -456,7 +375,7 @@
 								<div class="car_title">
 									<span>Nissan MURANO</span>
 									<b><font>Спеццена до 27 октября</font></b><br>
-									от 2&nbsp;399&nbsp;000&nbsp;руб.<br>
+									от 2&nbsp;399&nbsp;000&nbsp;₽<br>
 														 <!-- подарок 30 000 руб.<br>
 														 от ЭКСПЕРТ САМАРА</b> -->
 													 </div>
@@ -471,41 +390,14 @@
 												 </a>
 
 												 <a class="popup btn rassrochka" href="#form_popup"
-												 data-title="Получить рассрочку"
-												 data-comment=""
-												 data-form_name="callback"
-												 data-form_type_model_name=""
-												 data-form_diler="">
-												 <i></i><span>Получить рассрочку</span>
-											 </a>
+												data-title="Получить сниженную <br>% ставку по кредиту"
+												data-comment=""
+												data-form_name="callback"
+												data-form_type_model_name=""
+												data-form_diler="">
+												<i></i><span>Получить сниженную <br>% ставку по кредиту</span>
+												</a>
 
-												<!-- <div class="colors_title">Доступные цвета</div>
-
-												<ul class="colors_items">
-														<li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#d1d1d1"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#898989"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#ffffff"><span
-																						style="border-bottom-color:#b6702f"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#898989"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#21677a"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#cdc6ba"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#202020"><span
-																						style="border-bottom-color:#be0d1b"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#252525"><span
-																						style="border-bottom-color:#d0e2e5"></span></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
-														<li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-													</ul> -->
 												</div>
 
 
@@ -517,7 +409,7 @@
 														data-form_name="callback"
 														data-form_type_model_name=""
 														data-form_diler="">
-														Выгода до <span>250&nbsp;000 руб.</span>
+														Выгода до <span>250&nbsp;000&nbsp;₽</span>
 													</a>
 													<a class="popup cred" href="#form_popup"
 													data-title="0 руб. Первый взнос"
@@ -525,7 +417,7 @@
 													data-form_name="callback"
 													data-form_type_model_name=""
 													data-form_diler="">
-													Выгода по Трейд Ин <span>150&nbsp;000 руб.</span>
+													Выгода по Трейд Ин <span>150&nbsp;000&nbsp;₽</span>
 												</a>
 												<a class="popup cred" href="#form_popup"
 												data-title="0 руб. Первый взнос"
@@ -533,7 +425,7 @@
 												data-form_name="callback"
 												data-form_type_model_name=""
 												data-form_diler="">
-												Выгода по программе «В кругу&nbsp;Nissan» <span>100&nbsp;000 руб.</span>
+												Выгода по программе «В&nbsp;₽кругу&nbsp;Nissan» <span>100&nbsp;000&nbsp;₽</span>
 											</a>
 										</div>
 										<div class="btns">
