секция тест драйв

--- a/index.html
+++ b/index.html
@@ -457,9 +457,8 @@
 				<div class="fam_car">
 					<div class="fam_content">
 						<div class="fam_text">
-							Скидка по программе<br>
-							«Семейный автомобиль»
-							<span>150 000 руб.</span>
+							<span>NISSAN X-Trail</span> автомобиль месяца<br>
+							<small>Дополнительная выгода при приобретении в кредит до конца месяца</small>
 						</div>
 						<a class="popup btn red" href="#form_popup"
 						data-title="Узнать подробнее"
@@ -485,6 +484,7 @@
 
 		<div class="test-drive">
 			<div class="container">
+				<img src="img/nissan-lending-autumn-850x470.jpg" alt="Тест драйв Nissan">
 				<form id="form5" action="mail.php" method="POST" class="CKiForm" data-callkeeper_name="Выездной тест-драйв"
 				data-flash-title="Выездной тест-драйв">
 				<input name="title" type="hidden" value="Выездной тест-драйв">
@@ -494,7 +494,7 @@
 				<input name="form_diler" type="hidden" value="">
 
 				<div class="columns">
-					<div class="form_title">Выездной тест-драйв</div>
+					<div class="form_title">Выездной <br>тест-драйв</div>
 					<div class="comment">
 						Оставьте заявку, и менеджер<br> бесплатно зарезервирует<br> автомобиль для тест-драйва!
 					</div>
