--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 		<script>
 			window.country = "Самара";
-			window.addr = "г. Самара, ул. Новоурицкая, 22";
+			window.addr = "г. Самара, ул. Новоурицкая, 22А";
 			// КООРДИНАТЫ НЕ УДАЛЯТЬ!!!
-			window.map_dot1 = "53.1846";
-			window.map_dot2 = "50.1511";
+			window.map_dot1 = "53.18408591547759";
+			window.map_dot2 = "50.15186940668391";
 		</script>
 
-		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="css/main.min.css?261020202005">
 
 	</head>
 
@@ -117,14 +117,14 @@
 		</div>
 		<!-- /.top-banner -->
 
-		<!-- <div class="timer">
+		<div class="timer">
 			<div class="container timer_container">
 				<div class="title1">Срок действия акции до:</div>
 				<div class="mtimer">
 					<script src="//megatimer.ru/get/f5d55947236aa3a8b89ea523cdeb9bda.js"></script>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<div class="cars_wrapper">
 			<div class="container">
@@ -469,18 +469,9 @@
 						<span>Узнать подробнее</span>
 					</a>
 				</div>
-				<img src="img/nissan-lending-autumn-1061x450.jpg">
+				<img src="img/nissan-lending-autumn-1061x450-2.jpg">
 			</div>
 		</div>
-
-		<!-- <div class="timer">
-			<div class="container timer_container">
-				<div class="title1">Срок действия акции до:</div>
-				<div class="mtimer">
-					<script src="//megatimer.ru/get/f5d55947236aa3a8b89ea523cdeb9bda.js"></script>
-				</div>
-			</div>
-		</div> -->
 
 		<div class="test-drive">
 			<div class="container">
@@ -512,7 +503,6 @@
 				</form>
 			</div>
 		</div>
-
 
 		<div class="banner">
 			<div class="container">
@@ -547,7 +537,6 @@
 				</form>
 			</div>
 		</div>
-
 
 		<div class="container">
 			<div class="contacts">
@@ -610,7 +599,7 @@
 				</form>
 			</div>
 
-			<script src="js/scripts.min.js"></script>
+			<script src="js/scripts.min.js?261020202005"></script>
 
 	</body>
 </html>
