--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="icon" href="img/logo.svg">
 		
 		<!-- Styles -->
-		<link rel="stylesheet" href="css/main.min.css?261020202005">
+		<link rel="stylesheet" href="css/main.min.css?271020201313">
 
 		<!-- Variables for Map -->
 		<script>
@@ -122,11 +122,11 @@
 	<!-- /.top-banner -->
 
 	<div class="timer">
-		<div class="container timer_container">
-			<div class="title1">Срок действия акции до:</div>
-			<div class="mtimer">
-				<script src="//megatimer.ru/get/f5d55947236aa3a8b89ea523cdeb9bda.js"></script>
-			</div>
+		<div class="container">
+			<div class="timer_container">
+				<div class="title1">До конца акции осталось:</div>
+				<div class="Dtimer" id="Dtimer"></div>
+			</div>			
 		</div>
 	</div>
 
@@ -138,7 +138,7 @@
 					<div class="image_container">
 						<div class="car_title">
 							<span>Nissan TERRANO</span>
-							<b><font>Спеццена до 27 октября</font></b><br> от 1&nbsp;031&nbsp;000&nbsp;₽<br>
+							<b><font>Спеццена до <span id="myDate"></span>&nbsp;<span id="myMonth"></span></font></b><br> от 1&nbsp;031&nbsp;000&nbsp;₽<br>
 						</div>
 
 						<a class="popup image" href="#form_popup"	data-title="Узнать цену" data-form_name="callback">
@@ -178,7 +178,7 @@
 					<div class="image_container">
 						<div class="car_title">
 							<span>Nissan QASHQAI</span>
-							<b><font>Спеццена до 27 октября</font></b><br> от 1&nbsp;303&nbsp;000&nbsp;₽<br>
+							<b><font>Спеццена до <span id="myDate"></span>&nbsp;<span id="myMonth"></span></font></b><br> от 1&nbsp;303&nbsp;000&nbsp;₽<br>
 						</div>
 
 						<a class="popup image" href="#form_popup" data-title="Узнать цену" data-form_name="callback">
@@ -216,7 +216,7 @@
 					<div class="image_container">
 						<div class="car_title">
 							<span>Nissan XTRAIL</span>
-							<b><font>Спеццена до 27 октября</font></b><br> от 1&nbsp;549&nbsp;000&nbsp;₽<br>
+							<b><font>Спеццена до <span id="myDate"></span>&nbsp;<span id="myMonth"></span></font></b><br> от 1&nbsp;549&nbsp;000&nbsp;₽<br>
 						</div>
 
 						<a class="popup image" href="#form_popup" data-title="Узнать цену" data-form_name="callback">
@@ -254,7 +254,7 @@
 					<div class="image_container">
 						<div class="car_title">
 							<span>Nissan MURANO</span>
-							<b><font>Спеццена до 27 октября</font></b><br> от 2&nbsp;399&nbsp;000&nbsp;₽<br>
+							<b><font>Спеццена до <span id="myDate"></span>&nbsp;<span id="myMonth"></span></font></b><br> от 2&nbsp;399&nbsp;000&nbsp;₽<br>
 						</div>
 
 						<a class="popup image" href="#form_popup" data-title="Узнать цену" data-form_name="callback">
@@ -378,7 +378,7 @@
 		<div class="contacts">
 			<div class="title2">Контакты</div>
 			<div class="comment">Самара</div>
-			<div class="bottom_addr">г. Самара, ул. Новоурицкая, 22</div>
+			<div class="bottom_addr">г. Самара, ул. Новоурицкая, 22А</div>
 			<div class="bottom_worktime">Пн-сб с 9:00 до 21:00, вс. 9:00 до 19:00</div>
 			<a class="bottom_phone" href="tel:+78469777779">8 (846) 9 77777 9</a>
 			<a class="popup btn arrow" href="#form_popup" data-title="Заказать звонок" data-form_name="callback">
@@ -435,7 +435,7 @@
 
 	</div>
 
-	<script src="js/scripts.min.js?261020202005"></script>
+	<script src="js/scripts.min.js?271020201313"></script>
 
 	</body>
 	
