--- a/index.html
+++ b/index.html
@@ -66,31 +66,22 @@
 				<div class="advantages_container">
 					<ul class="advantages">
 						<li>
-							<a class="popup ico0" href="#form_popup" data-title="Комплект зимней резины в&nbsp;подарок!"	data-comment="" data-form_name="callback"	data-form_type_model_name="" data-form_diler="">
-								<span>Льготная <br>кредитная <br><strong>ставка 0,1%</strong></span>
+							<a class="popup ico0" href="#form_popup" data-title="Льготная кредитная ставка&nbsp;0,1%"	data-form_name="callback">
+								<span>Льготная <br>кредитная <br><strong>ставка&nbsp;0,1%</strong></span>
 							</a>
 						</li>
 						<li>
-							<a class="popup ico1" href="#form_popup"	data-title="Бонус до 450&nbsp;000&nbsp;₽"	data-comment="" data-form_name="callback"	data-form_type_model_name=""	data-form_diler="">
+							<a class="popup ico1" href="#form_popup"	data-title="Скидка&nbsp;30&nbsp;000₽ за лояльный Трейд&nbsp;Ин"	 data-form_name="callback">
 								<span>Скидка&nbsp;<strong>30&nbsp;000₽</strong><br> за лояльный <br>Трейд&nbsp;Ин</span>
 							</a>
 						</li>
 						<li>
-							<a class="popup ico2" href="#form_popup"
-							data-title="5&nbsp;лет гарантии в&nbsp;подарок"	data-comment=""
-							data-form_name="callback"
-							data-form_type_model_name=""
-							data-form_diler="">
+							<a class="popup ico2" href="#form_popup" data-title="Выгода по Трейд&nbsp;Ин 170&nbsp;000₽" data-form_name="callback">
 								<span>Выгода по<br> Трейд&nbsp;Ин<br> <strong>170&nbsp;000₽</strong></span>
 							</a>
 						</li>
 						<li>
-							<a class="popup ico4" href="#form_popup"
-							data-title="Оплатим дорогу до&nbsp;ДЦ "
-							data-comment=""
-							data-form_name="callback"
-							data-form_type_model_name=""
-							data-form_diler="">
+							<a class="popup ico4" href="#form_popup" data-title="Скидка 20&nbsp;000₽на доп.&nbsp;оборудование" data-form_name="callback">
 								<span>Скидка <br><strong>20&nbsp;000₽</strong> на доп.&nbsp;оборудование</span>
 							</a>
 						</li>
