--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 					<span>NISSAN X-Trail</span> автомобиль месяца<br>
 					<small>Дополнительная выгода при приобретении в кредит до конца месяца</small>
 				</div>
-				<a class="popup btn red" href="#form_popup" data-title="Узнать подробнее" data-subject="Узнать подробнее" data-form="NISSAN X-Trail автомобиль месяца" data-btn="Узнать подробнее">
+				<a class="popup btn red" href="#form_popup" data-title="Дополнительная выгода при приобретении в кредит до конца месяца" data-subject="Дополнительная выгода при приобретении в кредит до конца месяца" data-form="NISSAN X-Trail автомобиль месяца" data-btn="Узнать подробнее">
 					<span>Узнать подробнее</span>
 				</a>
 			</div>
@@ -344,7 +344,7 @@
 					</div>
 					<div class="form-group">
 						<button type="submit" class="form-control  CKFormTrigger btn red arrow FlashFormSubmit">
-							<span>Рассчитать кредит</span>
+							<span>Перезвоните мне</span>
 						</button>
 					</div>
 				</div>
