--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 								Выгода по Трейд Ин <span>150&nbsp;000&nbsp;₽</span>
 							</a>
 							<a class="popup cred" href="#form_popup" data-title="Выгода по программе «В&nbsp;кругу&nbsp;Nissan» 100&nbsp;000&nbsp;₽" data-subject="Получить выгоду" data-form="Выгода по программе «В кругу Nissan» 100 000. Nissan MURANO" data-btn="Получить выгоду">
-								Выгода по программе «В&nbsp;₽кругу&nbsp;Nissan» <span>100&nbsp;000&nbsp;₽</span>
+								Выгода по программе «В&nbsp;кругу&nbsp;Nissan» <span>100&nbsp;000&nbsp;₽</span>
 							</a>
 						</div>
 						<div class="btns">
