--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
 						<a class="popup btn rassrochka" href="#form_popup"	data-title="Получить сниженную %&nbsp;ставку по кредиту" data-subject="Получить сниженную % ставку по кредиту" data-form="Получить сниженную % ставку по кредиту. Nissan TERRANO" data-btn="Получить">
 							<i></i><span>Получить сниженную <br>% ставку по кредиту</span>
 						</a>
+						<a class="btn avn" href="https://nissan-smr.ru/available-cars/?terrano" target="_blank" title="Посмотреть Terrano в наличии">
+							<i></i><span>Авто в наличии</span>
+						</a>
 					</div>
 
 					<div class="props">
